src/main/java/com/example/recruit_page_wwy/_core/error/ex/Exception403.java
package com.example.recruit_page_wwy._core.error.ex;

public class Exception403 extends RuntimeException {
    public Exception403(String message) {
        super(message);
    }
}
